[package]
name = "ruster"
version = "0.1.0"
edition = "2021"
authors = ["Sammwy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
futures = "0.3.29"
rand = "0.8.5"
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
